--- a/train-controller/build.gradle
+++ b/train-controller/build.gradle
@@ -1,3 +1,6 @@
 dependencies {
     compile project(':train-interfaces')
+    // https://mvnrepository.com/artifact/com.google.guava/guava
+	implementation group: 'com.google.guava', name: 'guava', version: '30.1-jre'
+    
 }
