--- a/train-controller/build.gradle
+++ b/train-controller/build.gradle
@@ -1,7 +1,8 @@
 dependencies {
     compile project(':train-interfaces')
     // https://mvnrepository.com/artifact/com.google.guava/guava
-	implementation group: 'com.google.guava', name: 'guava', version: '30.1-jre'
-	compile "com.google.guava:guava:16+"
+	//implementation group: 'com.google.guava', name: 'guava', version: '30.1-jre'
+	implementation("com.google.guava:guava:30.1-jre")
+	//compile "com.google.guava:guava:16+"
     
 }
