--- a/train-sensor/build.gradle
+++ b/train-sensor/build.gradle
@@ -4,4 +4,5 @@ dependencies {
 
     compile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.mockito:mockito-core:2.7.16'
+    implementation("com.google.guava:guava:30.1-jre")
 }
