--- a/train-controller/build.gradle
+++ b/train-controller/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
+compile "com.google.guava:guava:16+"
     compile project(':train-interfaces')
     // https://mvnrepository.com/artifact/com.google.guava/guava
 	//implementation group: 'com.google.guava', name: 'guava', version: '30.1-jre'
