--- a/train-system/build.gradle
+++ b/train-system/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
+	compile "com.google.guava:guava:16+"
   compile project(':train-controller')
   compile project(':train-sensor')
   compile project(':train-user')
