--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,9 @@
+plugins {
+  id "org.sonarqube" version "2.6.2" apply false
+}
 subprojects {
   apply plugin: 'java'
+  apply plugin: 'org.sonarqube'
 
   repositories {
     jcenter()
