--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,25 @@
 plugins {
   id "org.sonarqube" version "2.6.2" apply false
+  id 'jacoco'
 }
 subprojects {
+
   apply plugin: 'java'
   apply plugin: 'org.sonarqube'
+  apply plugin: 'jacoco'
 
   repositories {
     jcenter()
   }
 }
+jacoco {
+  toolVersion = "0.8.6"
+  //reportDirectory = file("$buildDir/customJacocoReportDir")
+}
+/*jacocoTestReport {
+  reports {
+    xml.enabled false
+    csv.enabled false
+    html.destination file("${buildDir}/jacocoHtml")
+  }
+}*/
