--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,8 +1,6 @@
-#Thu Feb 25 11:09:45 CET 2021
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-bin.zip
+#Thu Mar 18 03:08:31 CET 2021
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.3-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
-systemProp.sonar.login=5f055d7c82eda5675724b804d211c6ee83f465b5
-systemProp.sonar.host.url=http://localhost:9000
